# devsecops-cli

./: Cargo.toml  README.md  reqs.txt  zshrc
.github/workflows/: ci.yml
src/: Dockerfile  cli.rs  main.rs
src/commands/: auth.rs  docker.rs  git.rs  log.rs  mod.rs  scan.rs
src/core/: config.rs  mod.rs  plugin.rs
src/modules/: mod.rs
src/modules/ai/: assistant.rs
src/modules/docker/: docker.rs  mod.rs  scan.rs
src/modules/git/: git.rs  mod.rs
src/modules/http/: client.rs  handler.rs
src/modules/image/: image.rs
src/services/: auth.rs  mod.rs
