[package]
name = "monokkai"
version = "0.1.0"
edition = "2024"
authors = ["Egor Mayer"]
description = "DevSecOps CLI: Security Scanning, Docker/GitHub Integration"
license = "MIT"
repository = "https://github.com/monokkai/devsecops-cli"
homepage = "https://hub.docker.com/r/monokkay/devsecops-cli"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.0"
dotenv = "0.15"
shellexpand = "3.0"
colored = { version = "2.0", features = ["no-color"] }
terminal_size = "0.2"
libloading = "0.8"