[package]
name = "monokkai"
version = "0.1.0"
edition = "2024"
authors = ["Egor Mayer"]
description = "DevSecOps CLI: Security Scanning, Docker/GitHub Integration"
license = "MIT"
repository = "https://github.com/monokkai/devsecops-cli"
homepage = "https://hub.docker.com/r/monokkay/devsecops-cli"

[dependencies]
colored = { version = "2.0", features = ["no-color"] }
terminal_size = "0.2"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
dotenv = "0.15.0"
ring = "0.17.7"
shellexpand = "3.1"
libloading = "0.8"
thiserror = "1.0"