[package]
name = "monokkai"
version = "0.1.0"
edition = "2024"
authors = ["Egor Mayer"]
description = "DevSecOps CLI: Security Scanning, Docker/GitHub Integration"
license = "MIT"
repository = "https://github.com/monokkai/devsecops-cli"
homepage = "https://hub.docker.com/r/monokkay/devsecops-cli"

[dependencies]
colored = { version = "3.0.0", features = ["no-color"] }
terminal_size = "0.4.2"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["blocking", "json",
    "stream",
    "gzip",
    "brotli", ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
dotenvy = "0.15"
ring = "0.17.14"
shellexpand = "3.1.1"
libloading = "0.8.8"
thiserror = "2.0.12"
lazy_static = "1.5.0"
once_cell = "1.21.3"
systemstat = "0.2.3"
chrono = "0.4.41"
chrono-tz = "0.10.4"